<resources>
    <!--format-->
    <string name="year_format">%d년</string>
    <string name="month_format">%d월</string>
    <string name="day_format">%d일</string>
    <string name="d_day_format">D+%d</string>
    <string name="after_birth_format">출산 후 %d일</string>
    <string name="day_achieved_format">%d/%d</string>
    <string name="step_format">%d단계</string>
    <string name="step_day_format">%d일차</string>
    <string name="step_and_day_format">%d단계&#160;%d일차</string>
    <string name="hashtag_format">#%s</string>
    <string name="score_format">%d점</string>
    <string name="count_format">%d회</string>
    <string name="minutes_format">%d분</string>
    <string name="calorie_format">%dkcal</string>
    <string name="baby_name_format">%s&#160;</string>
    <string name="day_detail_date_format">%s&#160;(%s)</string>
    <string name="date_format">%d-%d-%d</string>

    <!--string-->
    <string name="app_name">맘스피티</string>
    <string name="kakao_sign_in">카카오로 시작하기</string>
    <string name="sign_up_text">맘스피티를 이용하기 위한\n추가 정보를 입력하세요</string>
    <string name="write_nickname">닉네임을 입력하세요.</string>
    <string name="duplicate_check">중복확인</string>
    <string name="choice_birth_day">출산일을 선택하세요.</string>
    <string name="kg">kg</string>
    <string name="cm">cm</string>
    <string name="write_pre_weight">(선택) 임신 전 체중을 입력하세요.</string>
    <string name="write_current_weight">(선택) 현재 체중을 입력하세요.</string>
    <string name="write_current_height">(선택) 현재 키를 입력하세요.</string>
    <string name="home">홈</string>
    <string name="workout">운동</string>
    <string name="daily">데일리</string>
    <string name="mypage">마이페이지</string>
    <string name="daily_recommended_workout">오늘의 추천 운동</string>
    <string name="weekly_statistics">주간 달성일</string>
    <string name="divide_dot">&#160;·&#160;</string>
    <string name="workout_current_stage">지금 당신의\n위치는 어디인가요?</string>
    <string name="pick_step">몇단계 몇일차의\n<b>운동이 궁금하신가요?</b></string>
    <string name="recommend_workout">추천 운동</string>
    <string name="play_workout">운동 하러가기</string>
    <string name="congratulation">진심으로 축하해요</string>
    <string name="pick_date"><b>출산일을 선택</b>하세요!</string>
    <string name="choice">선택</string>
    <string name="rec">REC</string>
    <string name="re_record">다시 촬영</string>
    <string name="send">전송하기</string>
    <string name="next">다음</string>
    <string name="go_main">운동 하러가기</string>
    <string name="kcal">kcal</string>
    <string name="kcal_kor">칼로리</string>
    <string name="minute">분</string>
    <string name="time">시간</string>
    <string name="weight">체중</string>
    <string name="today_weight_comment">오늘 체중\n바로 입력하기</string>
    <string name="go_analysis">체형 분석 하기</string>
    <string name="analysis_result">체형 분석 결과</string>
    <string name="count">횟수</string>
    <string name="count_time">번</string>
    <string name="step">단계</string>
    <string name="sir">&#160;님</string>
    <string name="withdraw">회원탈퇴</string>
    <string name="set_alarm">알림설정</string>
    <string name="edit_profile">프로필 수정</string>
    <string name="after">이 흘렀어요</string>
    <string name="baby_name">아기 태명</string>
    <string name="nickname">닉네임</string>
    <string name="write_baby_name">아기 태명을 입력하세요</string>
    <string name="edit_finish">수정 완료</string>
    <string name="no_camera_permission">카메라 권한이 없습니다.</string>
    <string name="workout_finish">운동 종료하기</string>
    <string name="loading">조금만 기다려주세요...</string>
    <string name="start_ai_guide">AI 코칭 시작</string>
    <string name="result_comment">언제나 당신을 응원해요!</string>
    <string name="confirm">확인</string>
    <string name="edit_today_weight"><b>오늘의 체중</b>을\n입력해주세요</string>
    <string name="ai">AI</string>
    <string name="success">SUCCESS</string>
    <string name="workout_guide">카메라가 켜진 후 정면을 향해주시면\n운동이 시작됩니다</string>
    <string name="disabled_workout">현재 제공되는 운동을 해주세요</string>
    <string name="edit_profile_success">프로필 수정 성공</string>
    <string name="edit_profile_fail">프로필 수정 실패</string>
    <string name="help_link">https://puzzle-blouse-b1f.notion.site/08900aaefdba430ab846a20314cfb10a</string>
    <string name="body_shape_recommend_workout">체형 추천 운동</string>
    <string name="current_body_shape">현재 체형</string>
    <string name="start">시작하기</string>
    <string name="guide_comment">이렇게 따라하세요!</string>
    <string name="logout">로그아웃</string>
    <string name="sign_in_success">회원가입 성공</string>
</resources>