<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/main_home"
        android:icon="@drawable/ic_home"
        android:title="@string/home"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/main_workout"
        android:icon="@drawable/ic_workout"
        android:title="@string/workout"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/main_daily"
        android:icon="@drawable/ic_daily"
        android:title="@string/daily"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/main_mypage"
        android:icon="@drawable/ic_mypage"
        android:title="@string/mypage"
        app:showAsAction="ifRoom" />
</menu>