<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:paddingStart="@dimen/spacing_22dp"
            android:paddingEnd="@dimen/spacing_22dp">

            <TextView
                style="@style/bold_24sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/spacing_10dp"
                android:layout_marginBottom="@dimen/spacing_50dp"
                android:text="@string/sign_up_text" />

            <com.fitsionary.momspt.presentation.custom.CustomSignUpEditText
                android:layout_width="match_parent"
                android:layout_height="@dimen/sign_up_edit_text_height"
                android:layout_marginBottom="@dimen/spacing_16dp"
                app:hintText="@string/write_nickname"
                app:rightText="@string/duplicate_check"
                app:rightTextColor="@color/pink" />

            <com.fitsionary.momspt.presentation.custom.CustomSignUpEditText
                android:layout_width="match_parent"
                android:layout_height="@dimen/sign_up_edit_text_height"
                android:layout_marginBottom="@dimen/spacing_16dp"
                app:hintText="@string/choice_birth_day"
                app:iconImg="@drawable/ic_daily" />

            <com.fitsionary.momspt.presentation.custom.CustomSignUpEditText
                android:layout_width="match_parent"
                android:layout_height="@dimen/sign_up_edit_text_height"
                android:layout_marginBottom="@dimen/spacing_16dp"
                app:hintText="@string/write_pre_weight"
                app:rightText="@string/kg" />

            <com.fitsionary.momspt.presentation.custom.CustomSignUpEditText
                android:layout_width="match_parent"
                android:layout_height="@dimen/sign_up_edit_text_height"
                android:layout_marginBottom="@dimen/spacing_16dp"
                app:hintText="@string/write_current_weight"
                app:rightText="@string/kg" />

            <com.fitsionary.momspt.presentation.custom.CustomSignUpEditText
                android:layout_width="match_parent"
                android:layout_height="@dimen/sign_up_edit_text_height"
                app:hintText="@string/write_current_height"
                app:rightText="@string/cm" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/container_btn_play_workout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/bottom_nav_background"
            android:paddingLeft="@dimen/spacing_22dp"
            android:paddingTop="@dimen/spacing_20dp"
            android:paddingRight="@dimen/spacing_22dp"
            android:paddingBottom="@dimen/spacing_20dp"
            app:layout_constraintBaseline_toBottomOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <Button
                android:id="@+id/btn_play_workout"
                style="@style/medium_18sp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/round_background"
                android:backgroundTint="@color/pink"
                android:text="다음"
                android:textColor="@color/white" />
        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>