<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:overScrollMode="never">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:paddingStart="@dimen/spacing_22dp"
            android:paddingEnd="@dimen/spacing_22dp">

            <com.fitsionary.momspt.presentation.custom.CustomMonthStatisticsBox
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/spacing_20dp"
                app:bodyText="5"
                app:footerText="@string/count_time"
                app:headerText="@string/count" />

            <com.fitsionary.momspt.presentation.custom.CustomMonthStatisticsBox
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/spacing_10dp"
                app:bodyText="5"
                app:footerText="@string/minute"
                app:headerText="@string/time" />

            <com.fitsionary.momspt.presentation.custom.CustomMonthStatisticsBox
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/spacing_10dp"
                app:bodyText="1,2"
                app:footerText="@string/step"
                app:headerText="@string/step" />

            <CalendarView
                android:id="@+id/calendarView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/spacing_50dp" />
        </LinearLayout>
    </ScrollView>
</layout>