<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingStart="@dimen/default_spacing"
                android:paddingEnd="@dimen/default_spacing">

                <ImageView
                    android:layout_width="130dp"
                    android:layout_height="130dp"
                    android:layout_gravity="center"
                    android:layout_marginTop="@dimen/spacing_20dp"
                    android:src="@drawable/profile" />

                <TextView
                    style="@style/medium_14sp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/spacing_50dp"
                    android:layout_marginBottom="@dimen/spacing_8dp"
                    android:text="@string/nickname" />

                <com.fitsionary.momspt.presentation.custom.CustomSignUpEditText
                    android:id="@+id/et_edit_nickname"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/sign_up_edit_text_height"
                    android:inputType="text"
                    app:hintText="@string/write_nickname"
                    app:inputText=""
                    app:maxLen="5"
                    app:rightText="@string/duplicate_check"
                    app:rightTextColor="@color/pink" />

                <TextView
                    style="@style/medium_14sp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/spacing_20dp"
                    android:layout_marginBottom="@dimen/spacing_8dp"
                    android:text="@string/baby_name" />

                <com.fitsionary.momspt.presentation.custom.CustomSignUpEditText
                    android:id="@+id/et_edit_baby_name"
                    inputText=""
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/sign_up_edit_text_height"
                    android:inputType="text"
                    app:hintText="@string/write_baby_name"
                    app:maxLen="5" />
            </LinearLayout>
        </ScrollView>

        <LinearLayout
            android:id="@+id/container_btn_edit_finish"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/bottom_nav_background"
            android:paddingLeft="@dimen/default_spacing"
            android:paddingTop="@dimen/spacing_20dp"
            android:paddingRight="@dimen/default_spacing"
            android:paddingBottom="@dimen/spacing_20dp"
            app:layout_constraintBaseline_toBottomOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <Button
                android:id="@+id/btn_edit_finish"
                style="@style/medium_18sp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/button_background"
                android:text="@string/edit_finish"
                android:textColor="@color/white" />
        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>