<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/custom_dialog_background"
        android:paddingStart="@dimen/spacing_25dp"
        android:paddingTop="@dimen/spacing_35dp"
        android:paddingEnd="@dimen/spacing_25dp"
        android:paddingBottom="@dimen/spacing_25dp">

        <ImageButton
            android:id="@+id/btn_cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@null"
            android:src="@drawable/ic_cancle"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_today_weight"
            style="@style/medium_20sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawablePadding="@dimen/spacing_5dp"
            android:text="@string/edit_today_weight"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/et_edit_weight"
            style="@style/medium_18sp"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginTop="@dimen/spacing_35dp"
            android:ems="4"
            android:inputType="numberDecimal"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_today_weight" />

        <TextView
            style="@style/medium_16sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/spacing_5dp"
            android:text="@string/kg"
            app:layout_constraintBaseline_toBaselineOf="@+id/et_edit_weight"
            app:layout_constraintStart_toEndOf="@id/et_edit_weight" />

        <Button
            android:id="@+id/btn_confirm"
            style="@style/medium_18sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/spacing_35dp"
            android:background="@drawable/button_background"
            android:text="@string/confirm"
            android:textColor="@color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/et_edit_weight" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>